# electronics_sales

./: .env  README.md  docker-compose.yaml  manage.py  pyproject.toml
electronics_sales/: asgi.py  settings.py  urls.py  wsgi.py
trade_data/: admin.py  apps.py  filter.py  models.py  permissions.py  serializers.py  urls.py  views.py
trade_data/migrations/: 0001_initial.py
trade_network/: apps.py  models.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
